CHANGES IN VERSION 1.1.2
------------------------
 o add line break if substitution longer than 50 character <2015-04-28, Tue>
 o upport calculating branch for time scale tree <2015-04-28, Tue>
 o remove parsing tip sequence from mlb and mlc file <2015-04-28, Tue>
 o remove tip.fasfile in read.paml_rst for rstfile already contains tip sequence <2015-04-28, Tue>
 o scale_color accepts user specific interval and output contains 'scale' attribute that can be used for adding legend <2015-04-28, Tue>
 o extend fortify methods to support additional fields <2015-04-28, Tue>
 o extend get.fields methods to support additional fields <2015-04-28, Tue>
 o extend tree class to support additional info by merging two tree <2015-04-28, Tue>
 o implement merge_tree function to merge two tree objects into one <2015-04-28, Tue>
 
CHANGES IN VERSION 1.1.1
------------------------
 o minor bug fixed in extracting node ID of rst file <2015-04-27, Mon>
 o update parsing beast time scale tree to support _year (originally supports _year.\\d+) <2015-04-27, Mon>
 o add Tommy in author <2015-04-27, Mon>
 
CHANGES IN VERSION 0.99.28
------------------------
 o update vignette with floating table of content <2015-04-08, Wed>
 
CHANGES IN VERSION 0.99.27
------------------------
 o bug fixed, see https://github.com/GuangchuangYu/ggtree/issues/4 <2015-03-07, Tue>

CHANGES IN VERSION 0.99.26
------------------------
 o update geom_tiplab <2015-03-31, Tue>
 o update plot method of beast <2015-03-17, Tue>
 
CHANGES IN VERSION 0.99.25
------------------------
 o implement groupClade <2015-03-13, Fri>
 
CHANGES IN VERSION 0.99.24
------------------------
 o use "round" segment end, look very better <2015-03-12, Thu>
 o update vignett <2015-03-11, Wed>
 
CHANGES IN VERSION 0.99.23
------------------------
 o mv geom_hilight to hilight <2015-03-11, Wed>
 o mv geom_phylopic to phylopic <2015-03-11, Wed>
 o implement collapse and expand for collapse and expand a selected clade <2015-03-11, Wed> 
 