@@ -113,7 +113,9 @@ importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,geom_text)
 importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_fill_discrete)
 importFrom(ggplot2,scale_fill_gradient)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_x_reverse)
